--- a/pom.xml
+++ b/pom.xml
@@ -21,27 +21,13 @@
       <artifactId>javafx-controls</artifactId>
       <version>${javafx.version}</version>
     </dependency>
-    <!-- Uncomment for cross-platform fat jar-->
-    <!--
-      <dependency>
+     <dependency>
         <groupId>org.openjfx</groupId>
-        <artifactId>javafx-graphics</artifactId>
+        <artifactId>javafx-fxml</artifactId>
         <version>${javafx.version}</version>
-        <classifier>win</classifier>
-    </dependency>
-    <dependency>
-        <groupId>org.openjfx</groupId>
-        <artifactId>javafx-graphics</artifactId>
-        <version>${javafx.version}</version>
-        <classifier>linux</classifier>
-    </dependency>
-    <dependency>
-        <groupId>org.openjfx</groupId>
-        <artifactId>javafx-graphics</artifactId>
-        <version>${javafx.version}</version>
-        <classifier>mac</classifier>
-    </dependency>
-    -->
+     </dependency>
+
+
   </dependencies>
 
   <build>
